[package]
name = "plt-cairo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The cairo drawing backend template for the plt crate"
keywords = ["cairo", "plotting", "visualization", "graphics"]
categories = ["visualization", "graphics"]

[features]
default = ["png", "svg"]
png = ["dep:png", "cairo-rs/png"]
svg = ["cairo-rs/svg"]

[dependencies]
anyhow = "1"
cairo-rs = { version = "0.16" }
png = { version = "0.17", optional = true }

[dependencies.draw]
package = "plt-draw"
path = "../plt-draw"
version = "0.4.0"
