[package]
name = "plt-draw"
version = "0.3.0"
edition = "2021"
authors = ["Jonah Hoffman <jhh451@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plt-rs/plt"
description = "The drawing backend template for the plt crate"
keywords = ["plotting", "visualization", "graphics"]
categories = ["visualization", "graphics"]

[dependencies]
cairo-rs = { version = "0.15", features = ["png", "svg"] }
image = "0.24"
png = "0.17"
