[package]
name = "plt-draw"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The drawing backend template for the plt crate"
keywords = ["plotting", "visualization", "graphics"]
categories = ["visualization", "graphics"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
