[package]
name = "plt"
version = "0.2.1"
edition = "2021"
authors = ["Jonah Hoffman <jhh451@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plt-rs/plt"
description = "Plotting library with a focus on publication level aesthetics and ergonomic control."
keywords = ["plot", "graph", "plotting", "visualization"]
categories = ["visualization", "graphics"]

[dependencies]
thiserror = "1.0"
dyn-clone = "1.0"
ndarray = "0.15"

[dependencies.draw]
package = "plt-draw"
path = "../plt-draw"
version = "0.2.0"

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
