[package]
name = "plt"
version = "0.4.1"
edition = "2021"
authors = ["Jonah Hoffman <jhh451@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plt-rs/plt"
description = "Plotting library with a focus on publication level aesthetics and ergonomic control."
keywords = ["plot", "graph", "plotting", "visualization"]
categories = ["visualization", "graphics"]

[features]
default = ["cairo", "png", "svg"]
# backend features
cairo = ["dep:draw-cairo"]
# file format features
png = ["draw-cairo?/png"]
svg = ["draw-cairo?/svg"]

[dependencies]
dyn-clone = "1.0"
ndarray = "0.15"
thiserror = "1.0"

[dependencies.draw]
package = "plt-draw"
path = "../plt-draw"
version = "0.4.0"

[dependencies.draw-cairo]
package = "plt-cairo"
path = "../plt-cairo"
version = "0.1.0"
default-features = false
optional = true

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
