[package]
name = "plt"
version = "0.4.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plotting library with a focus on publication level aesthetics and ergonomic control."
keywords = ["plot", "graph", "plotting", "visualization"]
categories = ["visualization", "graphics"]

[features]
default = ["cairo", "png", "svg"]
# backend features
cairo = ["dep:draw-cairo"]
# file format features
png = ["draw-cairo?/png"]
svg = ["draw-cairo?/svg"]

[dependencies]
dyn-clone = "1.0"
thiserror = "2.0"

[dependencies.draw]
package = "plt-draw"
path = "../plt-draw"
version = "0.4.0"

[dependencies.draw-cairo]
package = "plt-cairo"
path = "../plt-cairo"
version = "0.1.0"
default-features = false
optional = true

[dev-dependencies]
ndarray = "0.17"
rand = "0.10"
rand_distr = "0.6"
